--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
     background-size: cover;  
 }
 body {
-    background-image: url('./imagens/universo.jpg');
+    background-image: url('./imagens/c.jpg');
 }
 
 .dropdown{
