--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   border-radius: 10px;
@@ -442,7 +445,7 @@ body {
 }
 
 .color-whatsapp {
-  background-color: #292929;
+  background-color: #191919;
 }
 
 .google-font {
@@ -458,5 +461,126 @@ body {
   color: white;
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+.carousel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: Arial;
+  margin-top: 50px;
+}
+
+.carousel__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-perspective: 300px;
+          perspective: 300px;
+}
+
+.carousel a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.carousel__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  width: 350px;
+  height: 250px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
+          box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
+  position: absolute;
+  -webkit-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+}
+
+@media (width: 768px) {
+  .carousel__item__item {
+    width: 150px;
+  }
+}
+
+.carousel__item:nth-child(1) {
+  background: linear-gradient(45deg, #094a9f 0%, #ffffff 100%);
+}
+
+.carousel__item:nth-child(2) {
+  background: linear-gradient(45deg, #0e15a2 0%, #fdbb2d 100%);
+}
+
+.carousel__item:nth-child(3) {
+  background: linear-gradient(45deg, #2D35EB 0%, #22c1c3 100%);
+}
+
+.carousel__item:nth-child(4) {
+  background: linear-gradient(45deg, #0e15a2 0%, #fdbb2d 100%);
+}
+
+.carousel__item:nth-child(5) {
+  background: linear-gradient(45deg, #c3c3c3 0%, #6618b5 100%);
+}
+
+.carousel__item[data-pos="0"] {
+  z-index: 5;
+}
+
+.carousel__item[data-pos="-1"], .carousel__item[data-pos="1"] {
+  opacity: 0.7;
+  -webkit-filter: blur(1px) grayscale(10%);
+          filter: blur(1px) grayscale(10%);
+}
+
+.carousel__item[data-pos="-1"] {
+  -webkit-transform: translateX(-40%) scale(0.9);
+          transform: translateX(-40%) scale(0.9);
+  z-index: 4;
+}
+
+.carousel__item[data-pos="1"] {
+  -webkit-transform: translateX(40%) scale(0.9);
+          transform: translateX(40%) scale(0.9);
+  z-index: 4;
+}
+
+.carousel__item[data-pos="-2"], .carousel__item[data-pos="2"] {
+  opacity: 0.4;
+  -webkit-filter: blur(3px) grayscale(20%);
+          filter: blur(3px) grayscale(20%);
+}
+
+.carousel__item[data-pos="-2"] {
+  -webkit-transform: translateX(-70%) scale(0.8);
+          transform: translateX(-70%) scale(0.8);
+  z-index: 3;
+}
+
+.carousel__item[data-pos="2"] {
+  -webkit-transform: translateX(70%) scale(0.8);
+          transform: translateX(70%) scale(0.8);
+  z-index: 3;
 }
 /*# sourceMappingURL=style.css.map */
