--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,7 @@ body {
     height: auto;
     margin:100px;
     display:flex;
+    align-items: center;
     justify-content: space-around;
     border-radius: 10px;
     position: relative;
@@ -333,3 +334,101 @@ body {
     margin-bottom: 0px;
   }
   
+
+
+
+
+
+
+
+.carousel {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  font-family: Arial;
+  margin-top: 50px;
+  &__list {
+    display: flex;
+    list-style: none;
+    position: relative;
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    perspective: 300px;
+  }
+  & a {
+      text-decoration: none;
+      color:#fff;
+  }
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 18px;
+    width: 350px;
+    height: 250px;
+    border-radius: 12px;
+    box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
+    position: absolute;
+    transition: all .3s ease-in;
+    
+    @media (width:768px) {
+        &__item {
+            width: 150px;
+        }
+    }
+    &:nth-child(1) {
+      background: linear-gradient(45deg, #094a9f 0%, #ffffff 100%);
+    }
+    &:nth-child(2) {
+      background: linear-gradient(45deg, #0e15a2 0%, #fdbb2d 100%);
+    }
+    &:nth-child(3) {
+      background: linear-gradient(45deg, #2D35EB 0%, #22c1c3 100%);
+    }
+    &:nth-child(4) {
+      background: linear-gradient(45deg, #0e15a2 0%, #fdbb2d 100%);
+    }
+    &:nth-child(5) {
+      background: linear-gradient(45deg, #c3c3c3 0%, #6618b5 100%);
+    }
+    
+    &[data-pos="0"] {
+      z-index: 5;
+    }
+    
+    &[data-pos="-1"],
+    &[data-pos="1"] {
+      opacity: 0.7;
+      filter: blur(1px) grayscale(10%);
+    }
+    
+    &[data-pos="-1"] {
+      transform: translateX(-40%) scale(.9);
+      z-index: 4;
+    }
+    
+    &[data-pos="1"] {
+      transform: translateX(40%) scale(.9);
+      z-index: 4;
+    }
+    
+    &[data-pos="-2"],
+    &[data-pos="2"] {
+      opacity: 0.4;
+      filter: blur(3px) grayscale(20%);
+    }
+    
+    &[data-pos="-2"] {
+      transform: translateX(-70%) scale(.8);
+      z-index: 3;
+    }
+    
+    &[data-pos="2"] {
+      transform: translateX(70%) scale(.8);
+      z-index: 3;
+    }
+  }
+}
