--- a/global.css
+++ b/global.css
@@ -35,7 +35,7 @@ body {
 .voltar button {
   width: 100%;
   padding: 5px;
-  background-color: #b14c1d;
+  background-color: #0e8f1f;
   border: none;
   font-weight: 500;
   letter-spacing: 0.5px;
