--- a/global.scss
+++ b/global.scss
@@ -32,7 +32,7 @@ body{
 .voltar button {
     width: 100%;
     padding: 5px;
-    background-color: rgb(177, 76, 29);
+    background-color: #0e8f1f;
     border: none;
     font-weight: 500;
     letter-spacing: 0.5px;
