--- a/jogoDaVelha/jogoDaVelha.scss
+++ b/jogoDaVelha/jogoDaVelha.scss
@@ -1,3 +1,6 @@
+body {
+    background-color: #83ab76;
+}
 .caixa-principal {
     width: 500px;
     height: 500px;
@@ -12,7 +15,8 @@
 .sub-caixa{
     width: calc(98.8% / 3);
     height: 33%;
-    border: 1px solid;
+    border: inherit;
+    align-items: center;
     display: flex;
     justify-content: center;
     font-size: 120px;
