--- a/listaDinamica/projeto2.css
+++ b/listaDinamica/projeto2.css
@@ -194,49 +194,52 @@ body {
 
 .alert {
   display: block;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 5px 2px #1b1b1b;
+          box-shadow: 0px 0px 5px 2px #1b1b1b;
   color: #fff;
-  border: 1px solid #fff;
+  background-color: #074f61;
   position: absolute;
-  left: 0;
+  right: 0;
   padding: 50px;
-  top: 80%;
+  top: 70%;
   -webkit-animation: alertinha 5s alternate ease-in-out;
           animation: alertinha 5s alternate ease-in-out;
 }
 
 @-webkit-keyframes alertinha {
   0% {
-    left: -390px;
+    right: -390px;
   }
   30% {
-    left: 60px;
+    right: 60px;
   }
   75% {
-    left: 80px;
+    right: 80px;
   }
   80% {
-    left: 60px;
+    right: 60px;
   }
   100% {
-    left: -500px;
+    right: -500px;
   }
 }
 
 @keyframes alertinha {
   0% {
-    left: -390px;
+    right: -390px;
   }
   30% {
-    left: 60px;
+    right: 60px;
   }
   75% {
-    left: 80px;
+    right: 80px;
   }
   80% {
-    left: 60px;
+    right: 60px;
   }
   100% {
-    left: -500px;
+    right: -500px;
   }
 }
 /*# sourceMappingURL=projeto2.css.map */
